# innodb-modularization

./: .codecov.yml  .gitignore  .travis.yml  CMakeGraphVizOptions.cmake  CMakeLists.txt  README.md  build-all.sh  dependency_graph.sh
libs/ut-dbg/src/: CMakeLists.txt  ut_a.cc  ut_ad.cc  ut_d.cc  ut_dbg_assertion_failed.cc
storage/innobase/libs/: CMakeLists.txt
storage/innobase/libs/align/src/: CMakeLists.txt  ut_align.cpp  ut_align_down.cpp  ut_align_offset.cpp  ut_calc_align.cpp  ut_calc_align_down.cpp  ut_uint64_align_down.cpp  ut_uint64_align_up.cpp
storage/innobase/libs/align/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/allocator/doc/: README.md
storage/innobase/libs/allocator/src/: CMakeLists.txt  MAP_ANON.cpp  MAP_ANON.h  OUT_OF_MEMORY_MSG.cpp  UT_DELETE.cpp  UT_DELETE_ARRAY.cpp  UT_NEW.cpp  UT_NEW_ARRAY.cpp  UT_NEW_ARRAY_NOKEY.cpp  UT_NEW_NOKEY.cpp  aligned_array_pointer.cpp  aligned_memory.cpp  aligned_pointer.cpp  alloc_max_retries.cpp  mem_strdupl.cpp  os_large_page_size.cpp  os_mem_alloc_large.cpp  os_mem_free_large.cpp  os_total_large_mem_allocated.cpp  os_use_large_pages.cpp  psi.cpp  ut_allocator.cpp  ut_delete.cpp  ut_delete_array.cpp  ut_free.cpp  ut_malloc.cpp  ut_malloc_nokey.cpp  ut_new_boot.cpp  ut_new_boot_safe.cpp  ut_new_pfx_t.cpp  ut_realloc.cpp  ut_zalloc.cpp  ut_zalloc_nokey.cpp  ut_zalloc_nokey_nofatal.cpp
storage/innobase/libs/allocator/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/assert/src/: ASSERT_ZERO.cpp  ASSERT_ZERO_BLOB.cpp  CMakeLists.txt
storage/innobase/libs/assert/tests/: base.cpp
storage/innobase/libs/atomic/src/: CMakeLists.txt  atomic.cpp
storage/innobase/libs/atomic/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/bit/src/: CMakeLists.txt  UT_BITS_IN_BYTES.cpp  ut_bit_get_nth.cpp  ut_bit_set_nth.cpp
storage/innobase/libs/bit/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/buf_block/src/: BPageLock.cpp  BPageMutex.cpp  CMakeLists.txt  buf_block_buf_fix_dec.cpp  buf_block_buf_fix_inc.cpp  buf_block_buf_fix_inc_func.cpp  buf_block_fix.cpp  buf_block_get_frame.cpp  buf_block_get_freed_page_clock.cpp  buf_block_get_io_fix.cpp  buf_block_get_io_fix_unlocked.cpp  buf_block_get_lock_hash_val.cpp  buf_block_get_state.cpp  buf_block_init.cpp  buf_block_set_file_page.cpp  buf_block_set_io_fix.cpp  buf_block_set_state.cpp  buf_block_state_valid.cpp  buf_block_t.cpp  buf_block_unfix.cpp
storage/innobase/libs/buf_block/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/buf_buddy/src/: CMakeLists.txt  buf_buddy_free_t.cpp  buf_buddy_stat_t.cpp
storage/innobase/libs/buf_buddy/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/buf_calc/doc/: README.md
storage/innobase/libs/buf_calc/src/: BlockReporter.cpp  CMakeLists.txt  buf_calc_page_crc32.cpp  buf_calc_page_new_checksum.cpp  buf_calc_page_old_checksum.cpp  buf_checksum_algorithm_name.cpp  flags.cpp  srv_checksum_algorithm.cpp  srv_checksum_algorithm_t.cpp
storage/innobase/libs/buf_calc/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/buf_chunk/src/: CMakeLists.txt  buf_chunk_init.cpp  buf_chunk_map_reg.cpp  buf_chunk_not_freed.cpp  buf_chunk_t.cpp  buf_get_nth_chunk_block.cpp  buf_pool_chunk_map_t.cpp
storage/innobase/libs/buf_chunk/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/buf_flush/src/: CMakeLists.txt  buf_flush_list_mutex_enter.cpp  buf_flush_list_mutex_exit.cpp  buf_flush_list_mutex_own.cpp  buf_flush_ready_for_replace.cpp
storage/innobase/libs/buf_flush/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/buf_frame/src/: CMakeLists.txt  buf_frame_align.cpp  buf_frame_copy.cpp  buf_frame_t.cpp
storage/innobase/libs/buf_frame/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/buf_lru/src/: CMakeLists.txt  buf_LRU_stat_cur.cpp  buf_LRU_stat_inc_io.cpp  buf_LRU_stat_inc_unzip.cpp  buf_LRU_stat_sum.cpp  buf_LRU_stat_t.cpp
storage/innobase/libs/buf_lru/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/buf_page/src/: CMakeLists.txt  buf_flush_t.cpp  buf_io_fix.cpp  buf_page_alloc_descriptor.cpp  buf_page_belongs_to_unzip_LRU.cpp  buf_page_can_relocate.cpp  buf_page_free_descriptor.cpp  buf_page_get_block.cpp  buf_page_get_flush_type.cpp  buf_page_get_freed_page_clock.cpp  buf_page_get_io_fix.cpp  buf_page_get_io_fix_unlocked.cpp  buf_page_get_mutex.cpp  buf_page_get_newest_modification.cpp  buf_page_get_state.cpp  buf_page_in_file.cpp  buf_page_is_accessed.cpp  buf_page_is_old.cpp  buf_page_mutex_enter.cpp  buf_page_mutex_exit.cpp  buf_page_mutex_own.cpp  buf_page_print_flags.cpp  buf_page_release_latch.cpp  buf_page_release_zip.cpp  buf_page_set_accessed.cpp  buf_page_set_flush_type.cpp  buf_page_set_io_fix.cpp  buf_page_set_old.cpp  buf_page_set_state.cpp  buf_page_set_sticky.cpp  buf_page_state.cpp  buf_page_t.cpp  buf_page_unset_sticky.cpp  flags.cpp
storage/innobase/libs/buf_page/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/buf_pool/src/: BufListMutex.cpp  BufPoolZipMutex.cpp  CMakeLists.txt  Cache_hint.cpp  CheckInFreeList.cpp  CheckInLRUList.cpp  CheckUnzipLRUAndLRUList.cpp  FlushHp.cpp  FlushListMutex.cpp  HazardPointer.cpp  LRUHp.cpp  LRUItr.cpp  Page_fetch.cpp  buf_get_total_list_len.cpp  buf_get_total_list_size_in_bytes.cpp  buf_get_total_stat.cpp  buf_get_withdraw_depth.cpp  buf_pool_chunk_map_t.cpp  buf_pool_from_array.cpp  buf_pool_from_block.cpp  buf_pool_from_bpage.cpp  buf_pool_get.cpp  buf_pool_get_curr_size.cpp  buf_pool_get_n_pages.cpp  buf_pool_get_oldest_modification_approx.cpp  buf_pool_index.cpp  buf_pool_info_t.cpp  buf_pool_is_obsolete.cpp  buf_pool_ptr.cpp  buf_pool_register_chunk.cpp  buf_pool_set_sizes.cpp  buf_pool_should_madvise.cpp  buf_pool_size_align.cpp  buf_pool_stat_t.cpp  buf_pool_t.cpp  buf_pool_update_madvise.cpp  buf_pool_withdrawing.cpp  buf_pools_list_size_t.cpp  buf_ptr_get_fsp_addr.cpp  buf_withdraw_clock.cpp  (+14 more)
storage/innobase/libs/buf_pool/tests/: CMakeLists.txt  base.cpp
storage/innobase/libs/buffer/doc/: README.md
storage/innobase/libs/buffer/src/: BPageLock.cpp  BPageMutex.cpp  BufListMutex.cpp  BufPoolZipMutex.cpp  (+118 more)
(+5800 files in other folders)
