add_subdirectory( align )
add_subdirectory( allocator )
add_subdirectory( assert )
add_subdirectory( atomic )

add_subdirectory( bit )
add_subdirectory( buf_block )
add_subdirectory( buf_buddy )
add_subdirectory( buf_calc )
add_subdirectory( buf_chunk )
add_subdirectory( buf_flush )
add_subdirectory( buf_frame )
add_subdirectory( buf_lru )
add_subdirectory( buf_page )
add_subdirectory( buf_pool )

add_subdirectory( clone )
add_subdirectory( compiler_hints )
add_subdirectory( cmp )
add_subdirectory( crc32 )
add_subdirectory( counter )
add_subdirectory( cpu )

add_subdirectory( data_types )
add_subdirectory( dict_mem )
add_subdirectory( dict_types )
add_subdirectory( disk )

add_subdirectory( error )
add_subdirectory( enum )

add_subdirectory( formatting )

add_subdirectory( gis_type )

add_subdirectory( hash )

add_subdirectory( io )
add_subdirectory( ioasync )

add_subdirectory( lock_priv )
add_subdirectory( lock_rec )
add_subdirectory( lock_sys )
add_subdirectory( lock_types )
add_subdirectory( log_arch )
add_subdirectory( log_buffer )
add_subdirectory( log_block )
add_subdirectory( log_chkp )
add_subdirectory( log_closer )
add_subdirectory( log_files )
add_subdirectory( log_flush )
add_subdirectory( log_recv )
add_subdirectory( log_sn )
add_subdirectory( log_sys )
add_subdirectory( log_types )
add_subdirectory( log_wait )
add_subdirectory( log_write )
add_subdirectory( logger )
add_subdirectory( lst )

add_subdirectory( machine )
add_subdirectory( math )
add_subdirectory( memory )
add_subdirectory( memory_check )
add_subdirectory( monitor )
add_subdirectory( mtr )

add_subdirectory( que_types )

add_subdirectory( page )
add_subdirectory( pfs )
add_subdirectory( print )

add_subdirectory( random )
add_subdirectory( rbt )
add_subdirectory( read )
add_subdirectory( record )

add_subdirectory( srv_thread )
add_subdirectory( string )
add_subdirectory( sync_array )
add_subdirectory( sync_event )
add_subdirectory( sync_latch )
add_subdirectory( sync_mutex )
add_subdirectory( sync_os )
add_subdirectory( sync_policy )
add_subdirectory( sync_rw )

add_subdirectory( tablespace )
add_subdirectory( thread )
add_subdirectory( time )
add_subdirectory( trx_roll )
add_subdirectory( trx_trx )
add_subdirectory( trx_types )
add_subdirectory( trx_sys )

add_subdirectory( univ )

add_subdirectory( vector )

add_subdirectory( wait )

