set( LIB_NAME data_types )

add_library( ${LIB_NAME} STATIC
    flags.cpp
    dtype_t.cpp
    data_mysql_default_charset_coll.cpp
    ib_like_t.cpp
    dtype_get_mysql_type.cpp
    dtype_is_string_type.cpp
    dtype_is_binary_string_type.cpp
    dtype_is_non_binary_string_type.cpp
    dtype_set.cpp
    dtype_get_charset_coll.cpp
    dtype_is_utf8.cpp
    dtype_get_mblen.cpp
    innobase_get_cset_width.cpp
    dtype_set_mbminmaxlen.cpp
    dtype_set_mblen.cpp
    dtype_get_mbminlen.cpp
    dtype_get_mbmaxlen.cpp
    dtype_validate.cpp
    dtype_copy.cpp
    dtype_get_mtype.cpp
    dtype_get_prtype.cpp
    dtype_get_len.cpp
    dtype_form_prtype.cpp
    dtype_get_fixed_size_low.cpp
    dtype_get_min_size_low.cpp
    dtype_get_max_size_low.cpp
    dtype_get_sql_null_size.cpp
    dtype_new_store_for_order_and_null_size.cpp
    dtype_new_read_for_order_and_null_size.cpp
    dtype_sql_name.cpp
    dtype_print.cpp
    dtype_get_at_most_n_mbchars.cpp
    spatial_status_t.cpp
    dfield_t.cpp
    dtuple_t.cpp
    dtuple_print.cpp
    big_rec_field_t.cpp
    big_rec_t.cpp
    dfield_get_type.cpp
    dfield_get_data.cpp
    dfield_set_type.cpp
    dfield_get_len.cpp
    dfield_set_len.cpp
    dfield_is_null.cpp
    dfield_is_ext.cpp
    dfield_set_ext.cpp
    dfield_get_spatial_status.cpp
    dfield_set_spatial_status.cpp
    dfield_set_data.cpp
    dfield_write_mbr.cpp
    dfield_set_null.cpp
    dfield_copy_data.cpp
    dfield_copy.cpp
    dfield_dup.cpp
    dfield_datas_are_binary_equal.cpp
    dfield_data_is_binary_equal.cpp
    dtuple_get_n_fields.cpp
    dtuple_get_n_v_fields.cpp
    dtuple_get_nth_field.cpp
    dtuple_get_nth_v_field.cpp
    dtuple_get_info_bits.cpp
    dtuple_set_info_bits.cpp
    dtuple_get_n_fields_cmp.cpp
    dtuple_set_n_fields_cmp.cpp
    DTUPLE_EST_ALLOC.cpp
    dtuple_create_from_mem.cpp
    dtuple_create.cpp
    dtuple_dup_v_fld.cpp
    dtuple_init_v_fld.cpp
    dtuple_create_with_vcol.cpp
    dtuple_set_n_fields.cpp
    dtuple_copy_v_fields.cpp
    dtuple_copy.cpp
    dtuple_get_data_size.cpp
    dtuple_check_typed.cpp
    dtuple_get_n_ext.cpp
    dtuple_coll_eq.cpp
    dtuple_fold.cpp
    dtuple_set_types_binary.cpp
    dtuple_contains_null.cpp
    dfield_check_typed.cpp
    dtuple_validate.cpp
    dfield_print_also_hex.cpp
    dtuple_print.cpp
    dfield_print.cpp
    dfield_print_raw.cpp
    data_error.cpp
    dfield_check_typed_no_assert.cpp
    dtuple_check_typed_no_assert.cpp
    dtuple_big_rec_free.cpp
)

target_compile_options( ${LIB_NAME} PRIVATE  )

target_include_directories(
    ${LIB_NAME}
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/../include
)

target_link_libraries(
    ${LIB_NAME}
    PUBLIC
    disk
    error
    formatting
    machine
    memory
    print
    random
    PRIVATE
)

